--- a/UpdateProblemSet1_550.Rmd
+++ b/UpdateProblemSet1_550.Rmd
@@ -62,6 +62,8 @@ Conditional Variance
 
 
 ## Exercise 2
+
+#Part A
 ```{r}
 library(fivethirtyeight)
 library(plyr)
@@ -98,3 +100,5 @@ for(row in 1:nrow(steak_survey)) {
 }
 
 ```
+# Part C
+The sign should be negative. Given that less-cooked steaks are more likely to be contaiminated and cause sickness (a risk), only more risk-adverse indiviudals tend to opt for it. 
